--- a/src/Todo/app/src/main/res/values/strings.xml
+++ b/src/Todo/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Todo</string>
+    <string name="app_name">TODO</string>
     <string name="app_title">TODOS</string>
     <string name="taskname_hint">What needs to be done?</string>
 </resources>
